--- a/src/Sass/_main.scss
+++ b/src/Sass/_main.scss
@@ -15,7 +15,7 @@ body {
   min-height: 60vh;
 
   .header {
-    padding: 10px;
+    padding: 20px 10px;
     background-color: $light-grey;
     border-radius: 6px;
     // display: flex;
@@ -26,15 +26,15 @@ body {
     }
 
     .date {
-      
+
     }
 
     .num-of-tasks {
-      
+
     }
   }
 
   .body {
-    padding: 10px;
+    padding: 20px 10px;
   }
 }
