--- a/src/Sass/_todo-item.scss
+++ b/src/Sass/_todo-item.scss
@@ -1,10 +1,17 @@
 
 .todo-item {
   vertical-align: middle;
+  word-wrap: break-word;
+
+  .completed-todo {
+    text-decoration: line-through;
+    color: $dark-grey;
+  }
 
   .delete {
     .delete-button {
       @include create-icon-button("red");
+      float: right;
 
       .delete-icon {
         vertical-align: middle;
